@@ -340,7 +340,7 @@ class IndividualControllerRoot extends BaseController {
 	*/
 	function canShowGedcomRecord() {
 		global $SHOW_GEDCOM_RECORD;
-		if ($SHOW_GEDCOM_RECORD && $this->indi->canDisplayDetails())
+		if (PGV_USER_CAN_EDIT && $SHOW_GEDCOM_RECORD && $this->indi->canDisplayDetails())
 			return true;
 	}
 	/**
@@ -526,16 +526,23 @@ class IndividualControllerRoot extends BaseController {
 		if (!empty($PGV_IMAGES["edit_indi"]["small"]))
 			$menu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["edit_indi"]["small"]);
 		$menu->addClass("submenuitem$ff", "submenuitem_hover$ff", "submenu$ff");
-		if (PGV_USER_CAN_EDIT) {
-			if ($USE_QUICK_UPDATE) {
-				$submenu = new Menu($pgv_lang["quick_update_title"]);
-				$submenu->addOnclick("return quickEdit('".$this->pid."','','".$GEDCOM."');");
-				$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
-				$menu->addSubmenu($submenu);
-				
-				$menu->addSeparator();
-			}
+		// Determine whether the Quick Update form can be shown
+		$showQuickForm = false;
+		if ($USE_QUICK_UPDATE) {
+			if ($USE_QUICK_UPDATE==='1' && PGV_USER_IS_ADMIN) $showQuickForm = true;
+			else if ($USE_QUICK_UPDATE==='2' && PGV_USER_GEDCOM_ADMIN) $showQuickForm = true;
+			else if (($USE_QUICK_UPDATE==='3' || $USE_QUICK_UPDATE===true) && PGV_USER_CAN_EDIT) $showQuickForm = true;
+		}
+		if ($showQuickForm) {
+			$submenu = new Menu($pgv_lang["quick_update_title"]);
+			$submenu->addOnclick("return quickEdit('".$this->pid."','','".$GEDCOM."');");
+			$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
+			$menu->addSubmenu($submenu);
 			
+			$menu->addSeparator();
+		}
+			
+		if (PGV_USER_CAN_EDIT) {
 			if (count($this->indi->getSpouseFamilyIds())>1) {
 				$submenu = new Menu($pgv_lang["reorder_families"]);
 				$submenu->addOnclick("return reorder_families('".$this->pid."');");
