@@ -117,6 +117,10 @@ $pgv_lang["log_message"]				= "Mitteilung";
 $pgv_lang["searchtype"]					= "Art der Suche";
 $pgv_lang["query"]						= "Abfrage";
 $pgv_lang["user"]						= "Benutzer bestätigt";
+$pgv_lang["editors"]					= "Benutzer mit Editier-Rechten";
+$pgv_lang["gedcom_admins"]				= "GEDCOM Verwalter";
+$pgv_lang["site_admins"]				= "Site Verwalter";
+$pgv_lang["nobody"]						= "Niemand";
 $pgv_lang["thumbnail_deleted"]			= "Miniaturbild wurde gelöscht.";
 $pgv_lang["thumbnail_not_deleted"]		= "Miniaturbild konnte nicht gelöscht werden.";
 $pgv_lang["step2"]						= "Schritt 2 von 4:";
