@@ -118,6 +118,10 @@ $pgv_lang["log_message"]			= "Log Message";
 $pgv_lang["searchtype"]				= "Search type";
 $pgv_lang["query"]					= "Query";
 $pgv_lang["user"]					= "Authenticated user";
+$pgv_lang["editors"]				= "Editors";
+$pgv_lang["gedcom_admins"]			= "GEDCOM Administrators";
+$pgv_lang["site_admins"]			= "Site Administrators";
+$pgv_lang["nobody"]					= "Nobody";
 $pgv_lang["thumbnail_deleted"]		= "Thumbnail file successfully deleted.";
 $pgv_lang["thumbnail_not_deleted"]	= "Thumbnail file could not be deleted.";
 $pgv_lang["step2"]					= "Step 2 of 4:";
