@@ -135,7 +135,7 @@ $pgv_lang["SHOW_MARRIED_NAMES_help"]	= "~#pgv_lang[SHOW_MARRIED_NAMES]#~<br /><b
 $pgv_lang["SHOW_QUICK_RESN"]			= "Datenschutz-Felder im Schnell-Edit Formular zeigen";
 $pgv_lang["SHOW_QUICK_RESN_help"]		= "~#pgv_lang[SHOW_QUICK_RESN]#~<br /><br />Diese Option ermöglicht Ihnen, die Datenschutz-Felder im #pgv_lang[quick_update_title]# Formular ein- oder auszuschalten.  Wenn diese Felder eingeschaltet sind, kann jeder editierender Benutzer die Standard-Datenschutzeinstellung der einzelnen Fakten außer Kraft stellen.<br />";
 $pgv_lang["USE_QUICK_UPDATE"]			= "Schnell-Edit Formular benutzen";
-$pgv_lang["USE_QUICK_UPDATE_help"]		= "~#pgv_lang[USE_QUICK_UPDATE]#~<br /><br />Diese Option ermöglicht angemeldeten Benutzern mit Editier-Rechten Datenbank-Änderungen durch das #pgv_lang[quick_update_title]# Formular zu bewirken.<br />";
+$pgv_lang["USE_QUICK_UPDATE_help"]		= "~#pgv_lang[USE_QUICK_UPDATE]#~<br /><br />Diese Option bestimmt die Benutzer-Rechte, die erforderlich sind, um das Schnell-Edit Formular für Änderungen in der Datenbank benutzen zu können.<br /><br />Die Wahl <b>#pgv_lang[nobody]#</b> bedeutet dass das Formular niemals benutzt werden darf.<br />";
 $pgv_lang["SEARCHLOG_CREATE"]			= "SearchLog-Dateien Archiv";
 $pgv_lang["SEARCHLOG_CREATE_help"]		= "~#pgv_lang[SEARCHLOG_CREATE]#~<br /><br />Bestimmt den Abstand in dem Searchlog-Dateien archiviert werden sollen.<br />";
 $pgv_lang["CHANGELOG_CREATE"]			= "ChangeLog-Dateien Archiv";
